# real-vibe-coding-python-public

./: .gitignore  Makefile  README.md  pyproject.toml
.claude/: CLAUDE.md  conventions.md  techspec.md
.claude/hooks/: post-edit-check.sh
.claude/rules/: dev.md  domain-context.md  python-coding-convention.md  techspec.md
.claude/skills/config-skill/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
config/: pyproject.toml
config/src/my_config/: __init__.py
logger/: CLAUDE.md  pyproject.toml
logger/src/my_logger/: __init__.py  logger.py
logger/tests/: __init__.py  test_logger.py
