[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[project]
name = "my-logger"
version = "0.1.0"
description = "Shared structured logging module for AIR services"
requires-python = ">=3.12"
dependencies = [
    "structlog",
    "python-dotenv",
    "pyyaml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "--cov=my_logger --cov-report=term-missing"

[tool.coverage.run]
source = ["src/my_logger"]
branch = true
